# PetProject

./: .gitignore  Dockerfile  docker-compose.yml  env.template
backend/: Makefile  alembic.ini  debug.yml  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 20241012_467797362605_client.py
backend/src/: admin.py  main.py
backend/src/app/api/: router.py
backend/src/app/api/v1/: auth.py  user.py
backend/src/app/models/: mixin.py
backend/src/app/models/users/: auth_auth.py  auth_token.py  client.py
backend/src/app/repositories/: exceptions.py
backend/src/app/repositories/metauser/: auth_token.py  auth_user.py
backend/src/app/schemas/: auth.py  client.py  types.py
backend/src/app/services/: user.py
backend/src/app/utils/: repository.py  unitofwork.py
backend/src/app/utils/static/: auth_crypto.py
backend/src/app_config/: app_settings.py  config_api.py  config_db.py  config_redis.py
backend/src/database/: all_models.py  database.py  database_metadata.py  db_accessor.py  types.py
backend/src/redisrepo/: dependencies.py
